; ModuleID = '/home/carl/AnghaBench/mongoose/examples/api_server/extr_sqlite3.c_sqlite3_uri_parameter.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/api_server/extr_sqlite3.c_sqlite3_uri_parameter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @sqlite3_uri_parameter(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i8* null, i8** %3, align 8
  br label %41

10:                                               ; preds = %2
  %11 = load i8*, i8** %4, align 8
  %12 = call i64 @sqlite3Strlen30(i8* %11)
  %13 = add nsw i64 %12, 1
  %14 = load i8*, i8** %4, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 %13
  store i8* %15, i8** %4, align 8
  br label %16

16:                                               ; preds = %34, %10
  %17 = load i8*, i8** %4, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 0
  %19 = load i8, i8* %18, align 1
  %20 = icmp ne i8 %19, 0
  br i1 %20, label %21, label %40

21:                                               ; preds = %16
  %22 = load i8*, i8** %4, align 8
  %23 = load i8*, i8** %5, align 8
  %24 = call i32 @strcmp(i8* %22, i8* %23)
  store i32 %24, i32* %6, align 4
  %25 = load i8*, i8** %4, align 8
  %26 = call i64 @sqlite3Strlen30(i8* %25)
  %27 = add nsw i64 %26, 1
  %28 = load i8*, i8** %4, align 8
  %29 = getelementptr inbounds i8, i8* %28, i64 %27
  store i8* %29, i8** %4, align 8
  %30 = load i32, i32* %6, align 4
  %31 = icmp eq i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %21
  %33 = load i8*, i8** %4, align 8
  store i8* %33, i8** %3, align 8
  br label %41

34:                                               ; preds = %21
  %35 = load i8*, i8** %4, align 8
  %36 = call i64 @sqlite3Strlen30(i8* %35)
  %37 = add nsw i64 %36, 1
  %38 = load i8*, i8** %4, align 8
  %39 = getelementptr inbounds i8, i8* %38, i64 %37
  store i8* %39, i8** %4, align 8
  br label %16

40:                                               ; preds = %16
  store i8* null, i8** %3, align 8
  br label %41

41:                                               ; preds = %40, %32, %9
  %42 = load i8*, i8** %3, align 8
  ret i8* %42
}

declare dso_local i64 @sqlite3Strlen30(i8*) #1

declare dso_local i32 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
